syntax = "proto3";
package ufo.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/mbakhodurov/examples/week_1/grpc/pkg/proto/ufo/v1;ufo_v1";

service UFOService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetAll(GetAllRequest) returns (GetAllResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
}

// SightingUpdateInfo информация о наблюдении НЛО для обновления (все поля опциональны)
message SightingUpdateInfo {
  // observed_at время наблюдения НЛО (опционально)
  google.protobuf.Timestamp observed_at = 1;
  
  // location место наблюдения (опционально)
  google.protobuf.StringValue location = 2;
  
  // description описание наблюдаемого объекта (опционально)
  google.protobuf.StringValue description = 3;
  
  // color цвет объекта (опционально)
  google.protobuf.StringValue color = 4;
  
  // sound признак наличия звука (опционально)
  google.protobuf.BoolValue sound = 5;
  
  // duration_seconds продолжительность наблюдения в секундах (опционально)
  google.protobuf.Int32Value duration_seconds = 6;
}

// SightingInfo базовая информация о наблюдении НЛО
message SightingInfo {
  // observed_at время наблюдения НЛО
  google.protobuf.Timestamp observed_at = 1;
  
  // location место наблюдения
  string location = 2;
  
  // description описание наблюдаемого объекта
  string description = 3;
  
  // color цвет объекта (опционально)
  google.protobuf.StringValue color = 4;
  
  // sound признак наличия звука (опционально)
  google.protobuf.BoolValue sound = 5;
  
  // duration_seconds продолжительность наблюдения в секундах (опционально)
  google.protobuf.Int32Value duration_seconds = 6;
}

// UpdateRequest запрос на обновление наблюдения
message UpdateRequest {
  // uuid идентификатор наблюдения для обновления
  string uuid = 1;
  
  // Обновляемая информация о наблюдении (частичное обновление)
  SightingUpdateInfo update_info = 2;
}

// CreateRequest запрос на создание наблюдения НЛО
message CreateRequest {
  // Данные для создания наблюдения
  SightingInfo info = 1;
}

// CreateResponse ответ на запрос создания наблюдения
message CreateResponse {
  // uuid идентификатор созданного наблюдения
  string uuid = 1;
}

message GetAllRequest{}

message GetAllResponse{
  repeated Sighting sightings = 1;
  int32 total_count = 2;
}

message GetRequest {
  // uuid идентификатор наблюдения
  string uuid = 1;
}

// GetResponse ответ с данными наблюдения
message GetResponse {
  // sighting данные наблюдения
  Sighting sighting = 1;
}

// Sighting представляет полную информацию о наблюдении НЛО
message Sighting {
  // uuid уникальный идентификатор наблюдения
  string uuid = 1;
  
  // Общая информация о наблюдении
  SightingInfo info = 2;
  
  // created_at время создания записи
  google.protobuf.Timestamp created_at = 3;
  
  // updated_at время последнего обновления записи
  google.protobuf.Timestamp updated_at = 4;
  
  // deleted_at время удаления записи (опционально)
  google.protobuf.Timestamp deleted_at = 5;
}

message DeleteRequest {
  string uuid = 1;
}